# LearningNotes

./: .gitignore  README.md
ACM/appendix/: README.md
ACM/chapter1/: 1-1-average.cpp  1-2-temprature.cpp  1-3-sum.cpp  1-4-sinAndCos.cpp  1-5-discount.cpp  1-6-triangle.cpp  1-7-is-leap-year.cpp  1-8-input-limit.cpp  1_1_sample_IO.cpp  1_2_triple_number_reverse.cpp  1_3_best_swap.cpp  1_4_chicken_rabbits_in_the_same_cage.cpp  1_5_sort_three_numbers.cpp  1_6_output_exp.cpp  1_7_input_exp.cpp  README.md
ACM/chapter2/: 2_1_7744.cpp  2_2_3nPlus1.cpp  2_3_approximating_decimal_sum.cpp  2_4_factorial_sum.cpp  2_5_uncertain_num_of_input.cpp
ACM/chapter3/: 3_1TexQuotes.cpp  3_2_WERTYU.cpp  3_3_Palindromes.cpp  3_4_master_mind_hints.cpp  3_5_digit_generator.cpp  3_6_circular_sequence.cpp  e3_1_score.cpp  e3_2_molar_mass.cpp  e3_3_digit_counting.cpp  floor.cpp  shu_shi.cpp  test.in
ACM/chapter4/: 4_0_sample_for_typedef.cpp  solve_float_accuray_using_EPS.cpp
ACM/chapter5/: 5_1_where_is_marble.cpp  5_2_the_blocks_problem.cpp  5_3_andys_first_dictionary.cpp  5_4_ananagrams.cpp  input_5_3  pre_5_1_framwork_in_cxx.cpp  pre_5_2_string_usage_in_cxx.cpp  pre_5_3_easy_use_on_string.cpp  (+3 more)
C++/: README.md  notes.md
Compiler/: piecesInCompiler.md  编译器的工作过程_make.md
DeepLearnig/: README.md
Linux/: 10_进程管理.md
SQL/: README.md
STL/: README.md
cleanCode/: concepts.md
dataStructure/: README.md
designPattern/: README.md
git/: 00_git使用笔记碎片.md  01_git命令开发篇.md  git使用笔记.md  git使用笔记碎片.md  git学习笔记(个人版本管理).md
html_and_css/: README.md
java/: eclipse使用.md
matlab/: README.md
python/: README.md  notesDuringDebug.md
tcpip/: IO复用.md
xmake/cmake/t2/: CMakeLists.txt
xmake/cmake/t2/src/: CMakeLists.txt  main.cpp
xmake/cmake/t3/lib/: CMakeLists.txt  hello.cpp  hello.h
xmake/cmake/t4/src/: CMakeLists.txt  main.cpp
xmake/cmake/t5/src/: CMakeLists.txt  main.cpp
(+486 files in other folders)
