PROJECT(HELLO)
ADD_SUBDIRECTORY(src bin)

# INSTALL DOC FILES HERE
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/t2)
# INSATLL sh files HERE
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
# INSTALL doc directory
#ADD_SUBDIRECTORY(doc share/doc/cmake/t2)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)

