SET(LIBHELLO_SRC hello.cpp)
ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})			# output libhello.so
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME hello)	# output libhello.a

# DO NOT CLEAN OUTPUT OF SAME NAME
# SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
# SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

# create version link
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)

# INSTALL
INSTALL(TARGETS hello hello_static
		LIBRARY DESTINATION lib 
		ARCHIVE DESTINATION lib)
INSTALL(FILES hello.h DESTINATION include/hello)
