ADD_EXECUTABLE(curltest main.cpp)
# way 1
# INCLUDE_DIRECTORIES(/usr/include)
# TARGET_LINK_LIBRARIES(curltest curl)

# way 2
FIND_PACKAGE(CURL)
IF(CURL_FOUND)
	INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIRECTORIES})
	TARGET_LINK_LIBRARIES(curltest ${CURL_LIBRARY})
ELSE(CURL_FOUND)
	MESSAGE(FATAL_ERROR "curl library not found")
ENDIF(CURL_FOUND)

